# TCGDB

./: .gitignore  Cargo.toml
src/: main.rs  mtg.rs
src/cards/: magic_card.rs  mod.rs
src/tables/: magic_table.rs  mod.rs
