[package]
name = "tcgdb"
version = "0.1.0"
authors = ["Spaery <spaery@spaery.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.7", features= ["blocking"] }
